--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
   },
   "homepage": "https://github.com/vcvcchaturvedi/oslash-be#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "firebase": "^9.10.0",
-    "jsonwebtoken": "^8.5.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.23",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
