--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "firebase": "^9.10.0",
