--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "oslash-be",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "Backend for oslash",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r esm -r ts-node/register './src/**/*test.ts' --reporter spec",
+    "test-with-coverage": "nyc --reporter=html mocha -r esm -r ts-node/register './src/**/*test.ts'",
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node -r esm dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "repository": {
@@ -26,25 +27,32 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "email-validator": "^2.0.4",
+    "esm": "^3.2.25",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "firebase": "^9.10.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.3",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^18.7.23",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
